# FurryFace

./: .gitignore
CheezePizza/: CMakeLists.txt  cmake_msvs10_x86.bat  cmake_msvs8-2005_x86.bat  cmake_msvs9-2008_x86.bat
CheezePizza/include/: cheezepizzacore.h  cheezepizzaengine.h  debugutilities.h  enginesubsystem.h  gamesession.h  inputsubsystem.h  irenderable.h  messagetypes.h  point.h  scene2d.h  scene2dmanager.h  scene2dobject.h  sharedinputconfigs.h  sharedrenderables.h  tickable.h  ticklinkedlist.h  world2d.h
CheezePizza/linklib/Debug/: hge-static.lib  hge.exp  hge.lib  hgehelpers.lib  suppabits.lib  zlibd.lib
CheezePizza/res/: engine.res
CheezePizza/src/core/: CMakeLists.txt  hge_impl.h  input.cpp  system.cpp
CheezePizza/src/games/esm/: CMakeLists.txt  esm.cpp  gameobject.h  paddle.h
CheezePizza/src/games/origins/: CMakeLists.txt  item.cpp  item.h  originscomponentdata.cpp  originscomponentdata.h  originscomponents.cpp  originscomponents.h  originsgameconfig.cpp  originsgameconfig.h  originsgamesession.cpp  originsgamesession.h  originsgamestate.h  originshud.cpp  originshud.h  originslinkrenderobject.cpp  originslinkrenderobject.h  originsplayer.cpp  originsplayer.h  originsplayerfactory.cpp  originsplayerfactory.h  originssubsystem.cpp  originssubsystem.h
CheezePizza/src/games/papercraft/: CMakeLists.txt  papercraftbulletbehaviors.cpp  papercraftbulletbehaviors.h  papercraftbulletsystem.cpp  papercraftbulletsystem.h  papercraftcomponentdata.cpp  papercraftcomponentdata.h  papercraftcomponents.cpp  papercraftcomponents.h  papercraftgameconfig.cpp  papercraftgameconfig.h  papercrafthud.cpp  papercrafthud.h  papercraftinputhandler.cpp  papercraftinputhandler.h  papercraftplayer.cpp  papercraftplayer.h  papercraftplayerdatatypes.h  papercraftplayerfactory.cpp  papercraftplayerfactory.h  papercraftplayerhandler.cpp  papercraftplayerhandler.h  papercraftplayership.cpp  papercraftplayership.h  papercraftstructures.cpp  papercraftstructures.h  papercraftsubsystem.cpp  papercraftsubsystem.h
CheezePizza/src/games/tetrisgame/: CMakeLists.txt  attractmode.cpp  attractmode.h  block.cpp  block.h  color.h  compares.h  creditroll.cpp  creditroll.h  defines.h  fsmmachine.h  fsmstate.h  gamecontrol.cpp  gamecontrol.h  line.cpp  line.h  tetrisblock.cpp  tetrisblock.h  tetrisblockfactory.cpp  tetrisblockfactory.h  tetrisblocki.cpp  tetrisblocki.h  tetrisblockj.cpp  tetrisblockj.h  tetrisblockl.cpp  tetrisblockl.h  tetrisblocko.cpp  tetrisblocko.h  tetrisblockproxy.cpp  tetrisblockproxy.h  tetrisblockrotator.h  tetrisblocks.cpp  tetrisblocks.h  tetrisblockt.cpp  tetrisblockt.h  tetrisblockz.cpp  tetrisblockz.h  tetrisgamesession.cpp  tetrisgamesession.h  tetrisgrid.cpp  (+5 more)
CheezePizza/src/suppabits/: CMakeLists.txt  actionhandler.cpp  actionhandler.h  cheezepizza.h  cheezepizzacore.cpp  cheezepizzacore.h  cheezepizzaengine.cpp  cheezepizzaengine.h  collisioncomponent.cpp  collisioncomponent.h  collisiondatatypes.h  collisionsubsystem.cpp  collisionsubsystem.h  component.h  componentdata.h  componentsystem.cpp  componentsystem.h  debugutilities.cpp  debugutilities.h  delegate.h  enginesubsystem.cpp  enginesubsystem.h  gamesession.cpp  gamesession.h  hud.cpp  hud.h  icomponent.h  inputconfig.cpp  inputconfig.h  inputhandler.cpp  inputhandler.h  inputsubsystem.cpp  inputsubsystem.h  iplatform.h  irenderable.h  launch.cpp  localplayer.cpp  localplayer.h  messagepump.cpp  messagepump.h  (+25 more)
CheezePizza/src/suppabits_win32/: CMakeLists.txt  launch.cpp  win32platform.cpp  win32platform.h
CheezePizza/src/tutorials/tutorial01/: CMakeLists.txt
CheezePizza/srcassets/origins/sprites/: link_run.pdn  link_run_2X.pdn
CheezePizza/test/tetristests/: CMakeLists.txt  tetristests.cpp
CheezePizza/test/unittestpp/: CMakeLists.txt
PartyCraft/: CMakeLists.txt
RabbitHole/src/: rabbithole.sln
RabbitHole/src/rabbitholesrc/: main.cpp  rabbithole.vcxproj
